fixed some stuff, added line jump

--- a/PasteSolutions/wwwroot/css/site.css
+++ b/PasteSolutions/wwwroot/css/site.css
@@ -113,10 +113,9 @@ body {
 .line-numbers,
 .arrow {
     padding-top: 13px;
-    padding-left: 1vw;
-    padding-right: .5vw;
     padding-bottom: 5px;
     display: flex;
+    flex-direction: column;
     width: auto;
     font-size: var(--font-size);
     min-height: calc(100% - 1em - 5px);
@@ -125,6 +124,33 @@ body {
     user-select: none;
     -moz-user-select: none;
     background-color: #1c1c1c;
+}
+
+.arrow {
+    padding-left: 1vw;
+    padding-right: .5vw;
+}
+
+.line-number {
+    position: relative;
+    color: #e6e1dc;
+    text-decoration: none;
+    padding-left: 1vw;
+    padding-right: .5vw;
+}
+
+.line-number.selected {
+    position: relative;
+    color: #e6e1dc;
+    text-decoration: none;
+    background-color: #f3bd69;
+    color: #1f1f1f !important;
+}
+
+.anchor {
+    position: absolute;
+    bottom: 100%;
+    padding-top: calc(40vh - 7%);
 }
 
 .code-input {
